<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9CFC6"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:hint="@string/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_"
            android:textColor="#000000"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputTitle">

        <RadioButton
            android:id="@+id/radioLow"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/baixa"
            android:textColor="#000000"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioNormal"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textColor="#000000"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioHigh"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/alta"
            android:textColor="#000000"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textConteudo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:hint="@string/conteudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConteudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:hint="@string/conteudo"
            android:textColor="#000000"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#AB9D99"
        android:text="@string/salvar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="126dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todoss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConteudo"
        app:srcCompat="@drawable/ic_photo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/todos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_camera"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
