<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9CFC6"
    android:padding="16dp">

    <!-- Título da nota -->
    <TextView
        android:id="@+id/textViewTitleDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:shadowColor="#0E0B0B"
        android:text="@string/t_tulo"
        android:textColor="#9A5425"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Prioridade da nota -->
    <TextView
        android:id="@+id/textViewPriorityDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prioridade"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleDetail" />


    <!-- Conteúdo da nota -->
    <TextView
        android:id="@+id/textViewContentDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/conte_do"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriorityDetail" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="249dp"
        android:layout_height="344dp"
        android:layout_marginTop="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContentDetail"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/ic_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>
